snapshots/noye__modules__vimeo__tests__video-2.snap
---
source: src/modules/vimeo/tests.rs
expression: "resp.get_say::<responses::Vimeo>()"
---
Video:
  id: 220883711
  width: 1920
  height: 1080
  duration: "03:11"
  fps: "25"
  title: "[title]"
  owner: "[owner]"
