snapshots/noye__modules__vimeo__tests__video-3.snap
---
source: src/modules/vimeo.rs
expression: "resp.get_say::<responses::Vimeo>()"
---
Video:
  id: 16750764
  width: 1280
  height: 720
  duration: "02:40"
  fps: "24"
  title: "[title]"
  owner: "[owner]"
